--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.0",
     "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@types/react-redux": "^7.1.9",
     "typescript": "~3.9.5"
   },
   "private": true
