--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "@use-expo/font": "^2.0.0",
+    "axios": "^0.19.2",
     "expo": "~38.0.8",
     "expo-linear-gradient": "~8.2.1",
     "expo-status-bar": "^1.0.2",
@@ -23,10 +24,12 @@
     "react-native-responsive-fontsize": "^0.4.3",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
