--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
+    "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-responsive-fontsize": "^0.4.3",
