--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/slider": "3.0.0",
+    "@react-navigation/bottom-tabs": "^5.7.2",
+    "@react-navigation/material-top-tabs": "^5.2.14",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "@use-expo/font": "^2.0.0",
@@ -27,6 +29,7 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-svg": "12.1.0",
+    "react-native-tab-view": "^2.15.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.4.0",
     "react-redux": "^7.2.0",
@@ -39,6 +42,7 @@
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "@types/react-redux": "^7.1.9",
+    "@types/redux-logger": "^3.0.8",
     "typescript": "~3.9.5"
   },
   "private": true
