--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@use-expo/font": "^2.0.0",
     "axios": "^0.19.2",
     "expo": "~38.0.8",
+    "expo-jwt": "^1.3.0",
     "expo-linear-gradient": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "react": "~16.11.0",
