--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "@use-expo/font": "^2.0.0",
     "axios": "^0.19.2",
     "expo": "~38.0.8",
-    "expo-jwt": "^1.3.0",
     "expo-linear-gradient": "~8.2.1",
     "expo-status-bar": "^1.0.2",
+    "jwt-decode": "^2.2.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.1.tar.gz",
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/jwt-decode": "^2.2.1",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
     "@types/react-redux": "^7.1.9",
