--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@microsoft/signalr": "^3.1.6",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/slider": "3.0.0",
     "@react-navigation/bottom-tabs": "^5.7.2",
