--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@use-expo/font": "^2.0.0",
     "axios": "^0.19.2",
     "expo": "~38.0.8",
+    "expo-constants": "~9.1.1",
     "expo-linear-gradient": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "jwt-decode": "^2.2.0",
