--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
     "expo-linear-gradient": "~8.2.1",
+    "expo-secure-store": "~9.0.1",
     "expo-status-bar": "^1.0.2",
     "jwt-decode": "^2.2.0",
     "react": "~16.11.0",
