--- a/app.json
+++ b/app.json
@@ -7,8 +7,8 @@
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "resizeMode": "cover",
+      "backgroundColor": "#1C3E76"
     },
     "platforms": ["ios", "android", "web"],
     "updates": {
